@@ -186,6 +186,10 @@ func upgradedb() {
 		doordie(db, "create index idx_onthonkid on onts(honkid)")
 		doordie(db, "update config set value = 19 where key = 'dbversion'")
 	case 19:
+		doordie(db, "create table places (honkid integer, name text, latitude real, longitude real)")
+		doordie(db, "create index idx_placehonkid on places(honkid)")
+		doordie(db, "update config set value = 20 where key = 'dbversion'")
+	case 20:
 	default:
 		log.Fatalf("can't upgrade unknown version %d", dbversion)
 	}
